<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">authenticator-samples</string>
	<string name="action_settings">Settings</string>
	<string name="label_login">Login</string>
    <string name="label_password">password</string>
    <string name="label_id">Id</string>
    <string name="label_email">Email</string>
    <string name="label_name">Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>

</resources>
